--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Pet shelter</title>
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-	<h1>Hello</h1>
+	<header>
+		<div class="container header__wrapper">
+			<a href="#" class="header__logo">
+				<p class="logo__title">Cozy House</p>
+				<p class="logo__subtitle">Shelter for pets in Boston</p>
+			</a>
+			<nav class="header__menu">
+				<ul class="menu__list">
+					<li class="menu__link active"><a href="#">About the shelter</a></li>
+					<li class="menu__link"><a href="#">Our pets</a></li>
+					<li class="menu__link"><a href="#">Help the shelter</a></li>
+					<li class="menu__link"><a href="#">Contacts</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
 </body>
 
 </html>
