--- a/index.html
+++ b/index.html
@@ -26,6 +26,37 @@
 			</nav>
 		</div>
 	</header>
+	<main>
+		<section class="introductory-block">
+			<div class="container introductory-wrapper">
+				<div class="introductory-block__info">
+					<h1 class="info__title">Not only people need a house</h1>
+					<p class="info__text">We offer to give a chance to a little and nice puppy with an extremely wide
+						and open heart. He or she will love you more than anybody else in the world, you will see!</p>
+
+					<a href="#" class="info__button">Make a friend</a>
+
+				</div>
+				<img src="./img/backDog.png" alt="">
+			</div>
+		</section>
+		<section class="about">
+			<div class="container">
+				<img src="./img/about-pets.jpg" alt="dogandcat">
+				<div class="about__info">
+					<h2 class="about__info_title">About the shelter “Cozy House”</h2>
+					<p class="about__info_text">Currently we have 121 dogs and 342 cats on our hands and statistics show
+						that only 20% of them will find a family. The others will continue to live with us and will be
+						waiting for a lucky chance to become dearly loved.</p>
+					<p class="about__info_text">We feed our wards with the best food and make sure that they do not get
+						sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers
+						and 28 employees of various skill levels. About 12% of the animals are taken by the shelter
+						staff. Taking care of the animals, they become attached to the pets and would hardly ever leave
+						them alone.</p>
+				</div>
+			</div>
+		</section>
+	</main>
 </body>
 
 </html>
