--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</div>
 		</section>
 		<section class="about">
-			<div class="container">
+			<div class="container about__wrapper">
 				<img src="./img/about-pets.jpg" alt="dogandcat">
 				<div class="about__info">
 					<h2 class="about__info_title">About the shelter “Cozy House”</h2>
