add Our Friends

--- a/index.html
+++ b/index.html
@@ -56,6 +56,46 @@
 				</div>
 			</div>
 		</section>
+		<section class="friends">
+			<div class="container">
+				<h2 class="friends__title">Our friends who<br />
+					are looking for a house</h2>
+				<div class="friends__wrapper">
+					<button class="friends__left-arrow"><img src="./img/Arrow-left.svg" alt="left-arrow"></button>
+					<div class="friends__body">
+						<div class="friends__body_items">
+							<img src="./img/pets-katrine.png" alt="cat">
+							<p class="friends__body_name">Katrine</p>
+							<div class="button-box">
+								<a href="#" class="friends__body__button">Learn more</a>
+							</div>
+						</div>
+
+						<div class="friends__body_items">
+							<img src="./img/pets-jennifer.png" alt="dog">
+							<p class="friends__body_name">Jennifer</p>
+							<div class="button-box">
+								<a href="#" class="friends__body__button">Learn more</a>
+							</div>
+						</div>
+
+
+						<div class="friends__body_items">
+							<img src="./img/pets-woody.png" alt="dog">
+							<p class="friends__body_name">Woody</p>
+							<div class="button-box">
+								<a href="#" class="friends__body__button">Learn more</a>
+							</div>
+						</div>
+
+					</div>
+					<button class="friends__right-arrow"><img src="./img/arrow-right.svg" alt="right-arrow"></button>
+				</div>
+				<div class="button-box">
+					<a href="#" class="friends__button">Get to know the rest</a>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 
