--- a/index.html
+++ b/index.html
@@ -96,6 +96,68 @@
 				</div>
 			</div>
 		</section>
+		<section class="help">
+			<div class="container">
+				<h2 class="help__title">How you can help
+					our shelter</h2>
+				<div class="help__body">
+					<div class="help__items">
+						<div class="help__image">
+							<img src="./img/icons/icon-pet-food.svg" alt="pet-food">
+						</div>
+						<p class="help__actions">Pet food</p>
+					</div>
+					<div class="help__items">
+						<div class="help__image">
+							<img src="./img/icons/icon-transportation.svg" alt="transportation">
+						</div>
+						<p class="help__actions">Transportation</p>
+					</div>
+					<div class="help__items">
+						<div class="help__image">
+							<img src="./img/icons/icon-toys.svg" alt="toys">
+						</div>
+						<p class="help__actions">Toys</p>
+					</div>
+					<div class="help__items">
+						<div class="help__image">
+							<img src="./img/icons/icon-bowls-and-cups.svg" alt="bowls-and-cups">
+						</div>
+						<p class="help__actions">Bowls and cups</p>
+					</div>
+					<div class="help__items">
+						<div class="help__image">
+							<img src="./img/icons/icon-shampoos.svg" alt="shampoos">
+						</div>
+						<p class="help__actions">Shampoos</p>
+					</div>
+					<div class="help__items">
+						<div class="help__image">
+							<img src="./img/icons/icon-vitamins.svg" alt="vitamins">
+						</div>
+						<p class="help__actions">Vitamins</p>
+					</div>
+					<div class="help__items">
+						<div class="help__image">
+							<img src="./img/icons/icon-medicines.svg" alt="medicines">
+						</div>
+						<p class="help__actions">Medicines</p>
+					</div>
+					<div class="help__items">
+						<div class="help__image">
+							<img src="./img/icons/icon-collars-leashes.svg" alt="collars-leashes">
+						</div>
+						<p class="help__actions">Collars / leashes</p>
+					</div>
+					<div class="help__items">
+						<div class="help__image">
+							<img src="./img/icons/icon-sleeping-area.svg" alt="sleeping-area">
+						</div>
+						<p class="help__actions">Sleeping areas</p>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 
