add donation block

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<button class="friends__left-arrow"><img src="./img/Arrow-left.svg" alt="left-arrow"></button>
 					<div class="friends__body">
 						<div class="friends__body_items">
-							<img src="./img/pets-katrine.png" alt="cat">
+							<img src="./img/pets-katrine.jpg" alt="cat">
 							<p class="friends__body_name">Katrine</p>
 							<div class="button-box">
 								<a href="#" class="friends__body__button">Learn more</a>
@@ -72,7 +72,7 @@
 						</div>
 
 						<div class="friends__body_items">
-							<img src="./img/pets-jennifer.png" alt="dog">
+							<img src="./img/pets-jennifer.jpg" alt="dog">
 							<p class="friends__body_name">Jennifer</p>
 							<div class="button-box">
 								<a href="#" class="friends__body__button">Learn more</a>
@@ -81,7 +81,7 @@
 
 
 						<div class="friends__body_items">
-							<img src="./img/pets-woody.png" alt="dog">
+							<img src="./img/pets-woody.jpg" alt="dog">
 							<p class="friends__body_name">Woody</p>
 							<div class="button-box">
 								<a href="#" class="friends__body__button">Learn more</a>
@@ -155,6 +155,19 @@
 						</div>
 						<p class="help__actions">Sleeping areas</p>
 					</div>
+				</div>
+			</div>
+		</section>
+		<section class="donation">
+			<div class="container donation__wrapper">
+				<img src="./img/donation-dog.png" alt="donation-dog">
+				<div class="donation__info">
+					<h2 class="donation__title">You can also make a donation</h2>
+					<p class="donation__bank-name">Name of the bank / Type of bank account</p>
+					<p class="donation__card-number">8380 2880 8028 8791 7435</p>
+					<p class="donation__text">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing
+						elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus
+						tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
 				</div>
 			</div>
 		</section>
