start new page and add header

--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
 				<div class="questions-block">
 					<h2 class="questions__first-title">For questions and suggestions</h2>
 					<div class="questions__email"><a href="mailto:email@shelter.com">email@shelter.com</a></div>
-					<div class="questions__tel"><a href="tel:+13 674 567 75 54">+13 674 567 75 54</a></div>
+					<div class="questions__tel"><a href="tel:+13 674 567 75 54">+13 674 567
+							75 54</a></div>
 				</div>
 				<div class="visiting-block">
 					<h2 class="visiting__title">We are waiting for your visit</h2>
