--- a/catalog.html
+++ b/catalog.html
@@ -28,6 +28,90 @@
 			</nav>
 		</div>
 	</header>
+	<main>
+		<section class="friends">
+			<div class="container">
+				<h2 class="friends__title">Our friends who<br />
+					are looking for a house</h2>
+
+				<div class="friends__block">
+					<div class="friends__first-row">
+						<div class="friends__body_items">
+							<img src="./img/pets-katrine.jpg" alt="cat">
+							<p class="friends__body_name">Katrine</p>
+							<div class="button-box">
+								<a href="#" class="friends__body__button">Learn more</a>
+							</div>
+						</div>
+
+						<div class="friends__body_items">
+							<img src="./img/pets-jennifer.jpg" alt="dog">
+							<p class="friends__body_name">Jennifer</p>
+							<div class="button-box">
+								<a href="#" class="friends__body__button">Learn more</a>
+							</div>
+						</div>
+
+
+						<div class="friends__body_items">
+							<img src="./img/pets-woody.jpg" alt="dog">
+							<p class="friends__body_name">Woody</p>
+							<div class="button-box">
+								<a href="#" class="friends__body__button">Learn more</a>
+							</div>
+						</div>
+						<div class="friends__body_items">
+							<img src="./img/pets-sophia.jpg" alt="dog">
+							<p class="friends__body_name">Sophia</p>
+							<div class="button-box">
+								<a href="#" class="friends__body__button">Learn more</a>
+							</div>
+						</div>
+					</div>
+					<div class="friends__second-row">
+						<div class="friends__body_items">
+							<img src="./img/pets-timmy.jpg" alt="cat">
+							<p class="friends__body_name">Timmy</p>
+							<div class="button-box">
+								<a href="#" class="friends__body__button">Learn more</a>
+							</div>
+						</div>
+						<div class="friends__body_items">
+							<img src="./img/pets-charly.jpg" alt="dog">
+							<p class="friends__body_name">Charly</p>
+							<div class="button-box">
+								<a href="#" class="friends__body__button">Learn more</a>
+							</div>
+						</div>
+						<div class="friends__body_items">
+							<img src="./img/pets-scarlet.jpg" alt="dog">
+							<p class="friends__body_name">Scarlett</p>
+							<div class="button-box">
+								<a href="#" class="friends__body__button">Learn more</a>
+							</div>
+						</div>
+						<div class="friends__body_items">
+							<img src="./img/freddie.jpg" alt="car">
+							<p class="friends__body_name">Freddie</p>
+							<div class="button-box">
+								<a href="#" class="friends__body__button">Learn more</a>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<div class="buttons">
+					<button class="left-arrows">&lsaquo;&lsaquo;</button>
+					<button class="left-arrow">&lsaquo;</button>
+					<p class="page-number active">1</p>
+					<button class="right-arrow">&rsaquo;</button>
+					<button class="right-arrows">&rsaquo;&rsaquo;</button>
+
+				</div>
+
+			</div>
+		</section>
+	</main>
 </body>
 
 </html>
