add footer and finished 'catalog' page

--- a/catalog.html
+++ b/catalog.html
@@ -112,6 +112,22 @@
 			</div>
 		</section>
 	</main>
+	<footer>
+		<div class="container footer__wrapper">
+			<div class="questions-block">
+				<h2 class="questions__first-title">For questions and suggestions</h2>
+				<div class="questions__email"><a href="mailto:email@shelter.com">email@shelter.com</a></div>
+				<div class="questions__tel"><a href="tel:+13 674 567 75 54">+13 674 567
+						75 54</a></div>
+			</div>
+			<div class="visiting-block">
+				<h2 class="visiting__title">We are waiting for your visit</h2>
+				<p class="visiting__address">1 Central Street, Boston (entrance from the store)</p>
+				<p class="visiting__address">18 South Park, London </p>
+			</div>
+			<img src="./img/footer-puppy.png" alt="puppy-dog">
+		</div>
+	</footer>
 </body>
 
 </html>
