fixed the buttons

--- a/catalog.html
+++ b/catalog.html
@@ -101,11 +101,11 @@
 
 				</div>
 				<div class="buttons">
-					<button class="left-arrows">&lsaquo;&lsaquo;</button>
-					<button class="left-arrow">&lsaquo;</button>
+					<a href="#" class="left-arrows">&lsaquo;&lsaquo;</a>
+					<a href="#" class="left-arrow">&lsaquo;</a>
 					<p class="page-number active">1</p>
-					<button class="right-arrow">&rsaquo;</button>
-					<button class="right-arrows">&rsaquo;&rsaquo;</button>
+					<a href="#" class="right-arrow">&rsaquo;</a>
+					<a href="#" class="right-arrows">&rsaquo;&rsaquo;</a>
 
 				</div>
 
