--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
 			</a>
 			<nav class="header__menu">
 				<ul class="menu__list">
-					<li class="menu__link "><a href="#">About the shelter</a></li>
+					<li class="menu__link "><a href="./index.html">About the shelter</a></li>
 					<li class="menu__link active"><a href="#">Our pets</a></li>
 					<li class="menu__link"><a href="#">Help the shelter</a></li>
 					<li class="menu__link"><a href="#">Contacts</a></li>
