--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<nav class="header__menu">
 				<ul class="menu__list">
 					<li class="menu__link active"><a href="#">About the shelter</a></li>
-					<li class="menu__link"><a href="#">Our pets</a></li>
+					<li class="menu__link"><a href="./catalog.html">Our pets</a></li>
 					<li class="menu__link"><a href="#">Help the shelter</a></li>
 					<li class="menu__link"><a href="#">Contacts</a></li>
 				</ul>
