fixed all the bugs and finished the project

--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
 </head>
 
 <body>
-	<header>
+	<header class="header">
 		<div class="container header__wrapper">
 			<a href="#" class="header__logo">
 				<p class="logo__title">Cozy House</p>
 				<p class="logo__subtitle">Shelter for pets in Boston</p>
 			</a>
+			<div class="header__burger">
+				<div class="first-line"></div>
+				<div class="second-line"></div>
+				<div class="third-line"></div>
+			</div>
 			<nav class="header__menu">
 				<ul class="menu__list">
 					<li class="menu__link active"><a href="#">About the shelter</a></li>
@@ -38,12 +43,14 @@
 					<a href="#" class="info__button">Make a friend</a>
 
 				</div>
-				<img src="./img/backDog.png" alt="">
+				<img src="./img/backDog.png" alt="Dog">
 			</div>
 		</section>
 		<section class="about">
 			<div class="container about__wrapper">
+
 				<img src="./img/about-pets.jpg" alt="dogandcat">
+
 				<div class="about__info">
 					<h2 class="about__info_title">About the shelter “Cozy House”</h2>
 					<p class="about__info_text">Currently we have 121 dogs and 342 cats on our hands and statistics show
