--- a/catalog.html
+++ b/catalog.html
@@ -12,12 +12,17 @@
 </head>
 
 <body>
-	<header>
+	<header class="header">
 		<div class="container header__wrapper">
 			<a href="#" class="header__logo">
 				<p class="logo__title">Cozy House</p>
 				<p class="logo__subtitle">Shelter for pets in Boston</p>
 			</a>
+			<div class="header__burger">
+				<div class="first-line"></div>
+				<div class="second-line"></div>
+				<div class="third-line"></div>
+			</div>
 			<nav class="header__menu">
 				<ul class="menu__list">
 					<li class="menu__link "><a href="./index.html">About the shelter</a></li>
