--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
 				<h2 class="friends__title">Our friends who<br />
 					are looking for a house</h2>
 				<div class="friends__wrapper">
-					<button class="friends__left-arrow"><img src="./img/Arrow-left.svg" alt="left-arrow"></button>
+					<div class="arrow-box-left">
+						<button class="friends__left-arrow"><img src="./img/Arrow-left.svg" alt="left-arrow"></button>
+					</div>
 					<div class="friends__body">
 						<div class="friends__body_items">
 							<img src="./img/pets-katrine.jpg" alt="cat">
@@ -97,7 +99,10 @@
 						</div>
 
 					</div>
-					<button class="friends__right-arrow"><img src="./img/arrow-right.svg" alt="right-arrow"></button>
+					<div class="arrow-box-right">
+						<button class="friends__right-arrow"><img src="./img/arrow-right.svg"
+								alt="right-arrow"></button>
+					</div>
 				</div>
 				<div class="button-box">
 					<a href="#" class="friends__button">Get to know the rest</a>
